--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 Извольте пригласить вас на свидание красивая девушка?
             </h1>
             <div class="buttonsOnly">
-                <div class="btn-wrapper"><button id="tb"> Так уж и быть сударь) </button> </div>
+                <div class="btn-wrapper"><button id="tb"> Конечно 💖 </button> </div>
                 <div class="btn-wrapper"><button id="gb"> Naaah </button> </div>
         
             </div>
             <div id="popup" class="popup"> 
                 <div class="popup-content">
                     <p> ЖАНЫМ СОЛ АЙ ЛОВ Ю СОООООУ МААААЧ<br>
-                        Я прибуду к вашему дому в 10:00 ;) 💖</p>
+                        Я прибуду к вашему дому в 10:00 2 го ноября ;) 💖</p>
                     <button id="closePopup">Alriiiiigth ;)</button>
                 </div>
             </div>
